<resources>
    <string name="app_name" translatable="false">Sportify</string>

    <string name="sign_in_description">Sign in with your Sportify ID</string>
    <string name="create_account_description">Create a new Sportify ID</string>
    <string name="congratulations">Congratulations!</string>
    <string name="successful_registration">Create account successful. You\'ll be redirected to the login screen now.</string>
    <string name="sign_in">Sign in</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_exist">Email already exists</string>
    <string name="password_not_match">Password not match</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="email_not_found">Email not found</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>
    <string name="wrong_code">Wrong code, please try again</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="confirm_password">Confirm your Password</string>
    <string name="password_warning">Password must be at least 6 characters long.</string>
    <string name="verify">Verify</string>
    <string name="verify_description">Enter the code we sent you to email.</string>
    <string name="enter_your_email">Enter your email to get OTP</string>
    <string name="next">Next</string>
    <string name="create_new_password">Create new password</string>
    <string name="create">Create</string>
    <string name="successful_reset_password">Reset password successful. You\'ll redirected to the login screen now.</string>

    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>

    <string name="tab_home_title">SPORTIFY</string>
    <string name="tab_news_title">NEWS</string>
    <string name="tab_matches_title">MATCHES</string>
    <string name="tab_settings_title">SETTINGS</string>

    <string name="team_sport_or_match">Team, Sport or Match</string>
    <string name="view_all">View All</string>
    <string name="highlights">Highlights</string>
    <string name="all_leagues">ALL LEAGUES</string>

    <string name="read_more">READ MORE</string>
    <string name="trending">Trending</string>

    <string name="upcoming">Upcoming</string>
    <string name="past_matches">Past Matches</string>
    <string name="timeline">Timeline</string>
    <string name="lineups">Lineups</string>
    <string name="stats">Stats</string>
    <string name="comment">Comment</string>
    <string name="full_time">Full time</string>

    <string name="shots_on_target">Shots on target</string>
    <string name="possession">Possession</string>
    <string name="passes">Passes</string>
    <string name="pass_accuracy">Pass accuracy</string>
    <string name="fouls">Fouls</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="red_cards">Red cards</string>
    <string name="offsides">Offsides</string>
    <string name="corners">Corners</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defender">Defender</string>
    <string name="midfielder">Midfielder</string>
    <string name="forward">Forward</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="shots">Shots</string>

    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="log_out">Log out</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="my_favorite">My favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>