<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvGoalkeeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/goalkeeper"
            android:textAllCaps="true"
            android:textColor="@color/content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/lvGoalkeeper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tvGoalkeeper"
            tools:listitem="@layout/item_lineups" />

        <TextView
            android:id="@+id/tvDefender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/defender"
            android:textAllCaps="true"
            android:textColor="@color/content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lvGoalkeeper" />

        <ListView
            android:id="@+id/lvDefender"
            android:nestedScrollingEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDefender"
            tools:listitem="@layout/item_lineups" />

        <TextView
            android:id="@+id/tvMidfielder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/midfielder"
            android:textAllCaps="true"
            android:textColor="@color/content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lvDefender" />

        <ListView
            android:id="@+id/lvMidfielder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvMidfielder"
            tools:listitem="@layout/item_lineups" />

        <TextView
            android:id="@+id/tvForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/forward"
            android:textAllCaps="true"
            android:textColor="@color/content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lvMidfielder" />

        <ListView
            android:id="@+id/lvForward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvForward"
            tools:listitem="@layout/item_lineups" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>