<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Autofill, TextFields">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clYourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_text_field"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etYourEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/your_email"
            android:textColor="@color/content"
            android:textColorHint="#A8A8A8"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvEnterYourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/enter_your_email"
        android:textColor="#525252"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/clYourEmail" />

    <TextView
        android:id="@+id/tvNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_primary_button"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvEnterYourEmail" />

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/cl"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="16dp"-->
    <!--        android:background="@drawable/background_text_field"-->
    <!--        android:padding="16dp"-->
    <!--        app:layout_constraintTop_toBottomOf="">-->

    <!--        <EditText-->
    <!--            android:id="@+id/et"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@color/transparent"-->
    <!--            android:hint=""-->
    <!--            android:textColor="@color/content"-->
    <!--            android:textColorHint="#A8A8A8"-->
    <!--            android:textSize="14sp"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->
    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>